fixed home tab bottom padding issue on small screen size

--- a/index.css
+++ b/index.css
@@ -38,8 +38,9 @@
     background: #a41d3145;
     display: none;
 }
-
-
+.h-90{
+    height: 90%;
+}
 .w-40{
     width: 40%;
 }
@@ -168,7 +169,7 @@
     }
 }
 .tab_content .content{
-    height: 100%;
+    height: 75%;
     overflow-y: auto;
 }
 .fs-35{
@@ -219,7 +220,7 @@
     text-align: justify;
     font-family: 'Cormorant', serif;
     font-size: 20px;
-    max-height: 68%;
+    /* max-height: 68%; */
     overflow-y: auto;
     word-spacing: 0.25rem;
     line-height: 2.5rem;
